php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31583 [PATCH] php_std_date() uses short day names in non-y2k_compliance mode
Submitted: 2005-01-17 12:43 UTC Modified: 2005-04-14 15:33 UTC
From: mike@php.net Assigned:
Status: Closed Package: Date/time related
PHP Version: 4CVS, 5CVS (2005-02-21) OS: *
Private report: No CVE-ID: None
 [2005-01-17 12:43 UTC] mike@php.net
Description:
------------
http://cvs.php.net/co.php/php-src/ext/standard/datetime.c#999
should use day_long_names[] to be RFC850 compliant

Expected result:
----------------
Sunday, 06-Nov-94 08:49:37 GMT

Actual result:
--------------
Sun, 06-Nov-94 08:49:37 GMT

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-01-17 13:25 UTC] mike@php.net
Here's the patch against HEAD:

--- php-src/ext/standard/datetime.c     12 Dec 2004 15:50:06 -0000      1.125
+++ php-src/ext/standard/datetime.c     17 Jan 2005 12:14:02 -0000
@@ -957,7 +957,7 @@
                                tm1->tm_hour, tm1->tm_min, tm1->tm_sec);
        } else {
                snprintf(str, 80, "%s, %02d-%s-%02d %02d:%02d:%02d GMT",
-                               day_short_names[tm1->tm_wday],
+                               day_full_names[tm1->tm_wday],
                                tm1->tm_mday,
                                mon_short_names[tm1->tm_mon],
                                ((tm1->tm_year) % 100),


... and PHP4:

--- php4/ext/standard/datetime.c        16 Dec 2004 00:10:55 -0000      1.96.2.17
+++ php4/ext/standard/datetime.c        17 Jan 2005 12:24:30 -0000
@@ -781,7 +781,7 @@
                                tm1->tm_hour, tm1->tm_min, tm1->tm_sec);
        } else {
                snprintf(str, 80, "%s, %02d-%s-%02d %02d:%02d:%02d GMT",
-                               day_short_names[tm1->tm_wday],
+                               day_full_names[tm1->tm_wday],
                                tm1->tm_mday,
                                mon_short_names[tm1->tm_mon],
                                ((tm1->tm_year) % 100),


 [2005-02-21 20:44 UTC] sniper@php.net
NEVER use that 'Irrelevant' or anything but 4 or 5 as first char in the Version field!!!

 [2005-04-14 15:33 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 16 00:00:02 2026 UTC