Fixed bug #31583 (php_std_date() uses short day names in non-y2k_compliance mode).

Patch by: mike at php dot net